[project]
name = "websocket-events"
version = "0.1.0"
description = ""
authors = [
    {name = "Mathieu Lecarme",email = "mathieu@garambrogne.net"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.13.2,<4.0.0)",
    "aiodns (>=3.6.1,<4.0.0)",
    "redis[hiredis] (>=7.1.0,<8.0.0)",
    "aiohttp-sse (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
"pytest" = "^9"

